eosio_numstr_macros/tests/ui/name-bad-char.rs
extern crate eosio_numstr_macros;

use eosio_numstr_macros::n;

fn main() {
    let _ = n!(test1230);
}